applications/teams/foresters/lumberlanding/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: lumberlanding
  labels:
    app: lumberlanding
spec:
  type: ClusterIP
  ports:
    - port: 80
      targetPort: 3000
      protocol: TCP
      name: http
  selector:
    app: lumberlanding
